--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:rTIHmGJd2Lf7vd1Twc2htzqmf5i8PJkDaj0laSaQrYw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
